--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "RvStudio",
-  "short_name": "RvStudio",
-  "start_url": ".",
+  "name": "rvstudioin",
+  "short_name": "rvstudioin",
+  "start_url": "/RvStudio/",
   "display": "standalone",
   "background_color": "#0175C2",
   "theme_color": "#0175C2",
