Revert "code pushed"
This reverts commit f48bcff4d8a9fb58b15b173e992c81a268f9eb1f.

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "RvStudio",
-  "short_name": "RvStudio",
+  "name": "rvstudioin",
+  "short_name": "rvstudioin",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#0175C2",
